fix(c-checkbox): Revert label vertical alignment fix

--- a/packages/csc-ui/src/components/c-checkbox/c-checkbox.scss
+++ b/packages/csc-ui/src/components/c-checkbox/c-checkbox.scss
@@ -21,7 +21,7 @@
   width: fit-content;
 
   &__label-content {
-    padding-top: 12px;
+    padding-top: 10px;
     text-align: left;
     user-select: none;
 
